--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -235,6 +235,7 @@ a:focus {
   width: 100%;
   height: 200px;
   margin-top: 100px;
+  background: url(../img/m.jpg) no-repeat center center scroll;
 }
 @media (min-width: 767px) {
   .content-section {
